--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "eslint": "^7.7.0",
+        "eslint-plugin-prettier": "^3.1.4",
+        "prettier": "^2.0.5",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
         "react-scripts": "3.2.0",
